--- a/src/style.css
+++ b/src/style.css
@@ -2,9 +2,11 @@ body {
   background-color: #f7f7fb;
   font-family: "Noto Sans", sans-serif;
 }
+
 a {
-  color: purple;
+  color: #ff8f35;
 }
+
 .weather-app {
   background: white;
   max-width: 600px;
@@ -13,15 +15,10 @@ a {
   border-radius: 16px;
   padding: 30px;
 }
+
 header {
   border-bottom: 1px solid #f7f7fb;
   padding: 0 0 30px;
-}
-footer {
-  border-top: 1px solid #f7f7fb;
-  padding: 30px 0 0x;
-  text-align: center;
-  color: grey;
 }
 
 .search-form-input {
@@ -34,10 +31,61 @@ footer {
 }
 
 .search-form-submit {
-  background-color: purple;
+  background-color: #ff8f35;
   color: white;
   border: none;
   border-radius: 6px;
   font-size: 16px;
   padding: 15px 30px;
+}
+
+main {
+  padding: 30px 0;
+}
+
+.weather-app-info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+
+.city-weather-details {
+  font-size: 16px;
+  line-height: 20px;
+  color: rgba(39, 33, 66, 0.4);
+}
+
+.city-weather-details strong {
+  color: #166368;
+}
+
+.weather-temperature-container {
+  display: flex;
+}
+
+.weather-icon {
+  margin-top: 22px;
+  font-size: 44px;
+}
+
+.weather-temp {
+  font-size: 85px;
+  font-weight: bold;
+}
+
+.weather-unit {
+  margin-top: 25px;
+  font-size: 25px;
+}
+
+footer {
+  border-top: 1px solid #f7f7fb;
+  padding: 30px 0 0x;
+  text-align: center;
+  color: rgb(65, 50, 100, 0.6);
 }
