--- a/src/style.css
+++ b/src/style.css
@@ -84,7 +84,7 @@ main {
   font-size: 25px;
 }
 
-.weather-forcast {
+.weather-forecast {
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
